fix(popover): add dark mode variables (#748)

--- a/tegel/src/components/popover-menu/popover-menu-theme-vars.scss
+++ b/tegel/src/components/popover-menu/popover-menu-theme-vars.scss
@@ -1,8 +1,14 @@
 :root,
 .sdds-theme-light {
-  --sdds-popover-bg-default: #fff;
+  --sdds-popover-menu-color: var(--sdds-grey-958);
+  --sdds-popover-menu-background: var(--sdds-white);
+  --sdds-popover-menu-background-hover: var(--sdds-grey-100);
+  --sdds-popover-menu-divider-color: var(--sdds-grey-300)
 }
 
 .sdds-theme-dark {
-  --sdds-popover-bg-default: #000;
+  --sdds-popover-menu-color: var(--sdds-grey-50);
+  --sdds-popover-menu-background: var(--sdds-grey-958);
+  --sdds-popover-menu-background-hover: var(--sdds-grey-800);
+  --sdds-popover-menu-divider-color: var(--sdds-grey-800)
 }
