--- a/tegel/src/components/popover-menu/popover-menu.scss
+++ b/tegel/src/components/popover-menu/popover-menu.scss
@@ -7,7 +7,7 @@
 
   overflow: hidden;
   width: 160px;
-  background-color: var(--sdds-popover-bg-default);
+  background-color: var(--sdds-popover-menu-background);
   padding: 16px;
   box-shadow: 0 3px 3px rgb(0 0 0 / 15%), 0 -1px 1px rgb(0 0 0 / 10%);
   border-radius: 4px;
